--- a/book.ini
+++ b/book.ini
@@ -12,7 +12,7 @@ src = "."
 build-dir = "book"
 
 [custom]
-content_header = "<ul dir=\"auto\"><li><em>凹语言: <a href=\"https://github.com/wa-lang/wa\">https://github.com/wa-lang/wa</a></em></li></ul><hr>"
+content_header = "<ul dir=\"auto\"><li><em>凹语言(Go实现, 面向WASM设计): <a href=\"https://github.com/wa-lang/wa\">https://github.com/wa-lang/wa</a></em></li><li><em>WaBook(Go语言实现的MD电子书构建工具): <a href=\"https://github.com/wa-lang/wabook\">https://github.com/wa-lang/wabook</a></em></li></ul><hr>"
 content_footer = ""
 page_footer = "<span>© 2019-2022 | <a href=\"https://github.com/chai2010/go-ast-book\">柴树杉、史斌、丁尔男</a> 保留所有权利</span>"
 
